[tool.poetry]
name = "spond"
version = "1.0.0"
description = "Simple, unofficial library with some example scripts to access data from the Spond API."
authors = ["Ola Thoresen <ola@nytt.no>"]
license = "GPL 3.0"
readme = 'README.md'
repository = 'https://github.com/Olen/Spond'

[tool.poetry.dependencies]
python = "^3.8"
aiohttp = "^3.8.5"

[tool.poetry.group.dev.dependencies]
black = "^24.4.0"
isort = "^5.11.4"
pytest = "^8.1.1"
pytest-asyncio = "^0.23.6"
mypy = "*"  # TEMP dev
pdoc = "*"  # TEMP dev
ruff = "*"  # TEMP dev

[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']

[tool.isort]
profile = "black"

[tool.mypy]  # TEMP dev
enable_error_code = ["ignore-without-code"]  # Require specific codes for ignores
warn_unused_configs = true
strict = true
# disallow_any_unimported = true  # Disallow Any types resulting from unfollowed imports
# no_implicit_optional = true  # Don't assume arguments with default values of None
# are Optional

[tool.ruff]
target-version = "py38"  # Ruff doesn't respect Python dependency in [tool.poetry
# .dependencies]
exclude = ["."]
include = ["spond/*.py", "tests/*.py"]

[tool.ruff.lint]

select = ["ALL"]
ignore = [
# Rules that conflict with Ruff formatter
    "COM812",  # Trailing comma missing
    "ISC001",  # Implicitly concatenated string literals on one line
# Ignore other rules:
    # "ANN001",  # Missing type annotation for ... function argument
    # "ANN002",  # ... `**args`
    # "ANN003",  # ... `**kwargs`
    # "ANN201",  # Missing return type annotation for ... public function
    # "ANN202",  #  ... private function
    # "ANN205",  # ... staticmethod
    "B",
    "D100",  # Missing docstring in public module
    "D101",  # ... class
    "D102",  # ... method
    "D103",  # ... function
    "D104",  # ... package
    "D202",  # No blank lines allowed after function docstring
    "D205",  # 1 blank line required between summary line and description
    "D400",  # First line should end with a period
    "D401",  # First line of docstring should be in imperative mood:
    "D403",  # First word of the first line should be capitalized: `change` -> `Change`
    "E501",  # Line too long
    "FBT",
    "PLR",
    "S105",
    "T201",  # print
    "TRY",
]

[tool.ruff.lint.per-file-ignores]
# Ignore rules that aren't relevant in tests:
    # S101 Use of assert detected
    # F841 Local variable is assigned to but never used (triggered by testing raises)
"**/{tests}/*" = ["S101", "F841"]
"base.py" = ["ANN001", "ANN002", "ANN003", "ANN202", "ANN205"]
"spond.py" = ["ANN201", "ANN202"]
"test_spond.py" = ["ANN001", "ANN002", "ANN003", "ANN201", "ANN202"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
