[project]
name = "spond"
version = "1.1.1"
description = "Simple, unofficial library with some example scripts to access data from the Spond API."
license = "GPL-3.0-only"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    { name = "Ola Thoresen", email = "ola@nytt.no" },
]
dependencies = [
    "aiohttp>=3.8.5"
]

[project.urls]
repository = "https://github.com/Olen/Spond"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
pytest-asyncio = ">=0.23.6,<0.26.0"
ruff = "^0.9.6"

[tool.ruff.lint]
select = [
    "ANN201",  # Missing return type annotation for public function
    "E",  # pycodestyle
    "F",  # Pyflakes
    "I",  # isort
    "SIM",  # flake8-simplify
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # Line too long: needs code refactors first
]

[tool.ruff.lint.per-file-ignores]
# In example files:
# - Don't try to sort imports as non-existent `config` module causes issues in CI
# - Don't enforce type annotations for now
"attendance.py" = ["ANN", "I001"]
"groups.py" = ["ANN", "I001"]
"ical.py" = ["ANN", "I001"]
"manual_test_functions.py" = ["I001"]
"transactions.py" = ["ANN", "I001"]

# In tests:
# - Don't enforce type annotations for now
"**/{tests}/*" = ["ANN"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
